Nav is no longer "sticky"
This prevents the navigation bar from overlapping with text within the body

--- a/main.css
+++ b/main.css
@@ -103,8 +103,3 @@ nav a:hover {
     padding: 15px 20px;
     outline: solid 6px rgb(152, 203, 247);
 }
-.sticky {
-    position: sticky;
-    top: 0;
-}
-
